# slimy

./: .gitignore  CMakeLists.txt  build-release.bat  start-public-server.bat
.github/workflows/: fs-audit.yml  net-trace.yml
deploy/: hub-manifest.example.txt  update-multi.example.manifest
maps/: default.sjmap  sample.sjmap
scripts/: build-release.ps1  run-server.ps1  start-public-server.ps1
src/: main.cpp  server_main.cpp
src/game/: MapIO.cpp  MapIO.h  Scene.cpp  Scene.h  Slime.cpp  Slime.h
src/math/: Vec2.h
src/net/: NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  Protocol.h  Room.cpp  Room.h
src/physics/: Body.cpp  Body.h  Broadphase.cpp  Broadphase.h  Collision.cpp  Collision.h  SoftBody.cpp  SoftBody.h  World.cpp  World.h
src/platform/: AutoUpdate.cpp  AutoUpdate.h
src/render/: Renderer.cpp  Renderer.h
src/tools/: map_editor.cpp
